# risk-mgmt-v2

./: Dockerfile  README.md  ecs-task-def.json  exceptions.py  pyproject.toml
src/: explor.ipynb  main.py  output.txt
src/api/: endpoint.py
src/core/: config.py
src/dto/: UploadPdfResponse.py
src/services/: business_interruption.py  currency_convertion.py  current_insurance.py  db.py  graph.py  insurance_recommendation.py  multi_currency_risk.py  property_valudation.py  risk_percentages.py  textract_client.py
src/utils/: s3.py
